# w3server

./: Makefile  README
docs/: binexample.html  browserdiag.html  errorpage.html  report.html
htdocs/: index.html
source/: Doxyfile  README  docu.h
source/client/: .#mail.txt  Makefile  Makefile.in  configure  configure.in  test.html
source/client/cache/: io_hund
source/client/include/: config.doxygen  config.h  config.h.in  w3client.h  w3clientconfig.h  w3comm.h  w3error.h  w3smtp.h  w3string.h  w3thread.h  w3types.h  w3uri.h
source/client/src/: img.lex  lex.yy.c  main.c  w3client.c  w3comm.c  w3error.c  w3smtp.c  w3string.c  w3thread.c  w3uri.c
source/client/utils/: correct.lex  lex.yy.c
source/doc/html/: annotated.html  client_2include_2config_8h-source.html  client_2include_2config_8h.html  client_2include_2docu_8h-source.html  client_2include_2docu_8h.html  client_2src_2main_8c.html  clientdoc.html  clientdocu.html  docu_8h-source.html  docu_8h.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  group__client.html  group__server.html  hierarchy.html  index.html  modules.html  pages.html  server_2include_2config_8h-source.html  server_2include_2config_8h.html  server_2include_2docu_8h-source.html  server_2include_2docu_8h.html  (+50 more)
source/server/: Doxyfile  Makefile  Makefile.in  README  config.status  configure  configure.in
source/server/include/: config.doxygen  config.h  config.h.in  w3html.h  w3server.h
source/server/src/: main.c  w3html.c  w3server.c
(+43 files in other folders)
