AC_INIT(src/w3server.c)

AC_PROG_CC
AC_CHECK_PROG(DOXYGEN,doxygen,doxygen doxygen.config,echo)

AC_CHECK_LIB(pthread,pthread_create,,
	[echo "***** :( Please install libpthread first :( *****"; exit])

AC_CHECK_LIB(socket,recv)
AC_CHECK_LIB(nsl,connect)

AC_CONFIG_HEADER(include/config.h)
AC_OUTPUT(./Makefile)


























